create github pages

--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
+<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
 
     
 
@@ -70,7 +70,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">
                     Who We Are</h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Metricvault (formerly known as Metricvault Technologies) a whole new perspective”, is a fast emerging Technology consulting company based at Bangalore, India. We provide a diversity of consulting Services bespoke to the specific client needs.
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Metricvault (formerly known as Metricvault Technologies) a whole new perspective”, is a fast emerging Technology consulting company based at Karnool, India. We provide a diversity of consulting Services bespoke to the specific client needs.
 <br>
 <br>Metricvault Infosoft Private Limited was started in response to ever increasing need of High quality low cost Business Process Outsourcing services at Karnool, Andrapradesh. Having seen the need to provide UK, USA and Australia based companies with Call Centre, Service Management and Back Office Solutions, Metricvault BPO was formed.
 <br>
