--- a/page1.html
+++ b/page1.html
@@ -39,8 +39,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                        <img src="assets/images/logo2.png" alt="Mobirise" style="height: 3.8rem;">
+                    <a href="http://www.metricvault.in">
+                        <img src="assets/images/metric-276x71.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
 
     
 
