--- a/page4.html
+++ b/page4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
 
     
 
@@ -122,7 +122,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M/l8+om3ynz1MtwNww2ir4NLKBuRiiwN/mk8C8/nV4ud1y5W/ubg9K/BxWGT1Br/fHpgvUkO2JAR3M9Y4QzjbIx5njox8yeNt7cN28/IIqT0RhadkckShgc0pbM4aKsA">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZtCpVPbtLCo+cPAIwlMphRibvuUewuhz5IOphfu+4XcYSNBsfDTgfVM8HA6K0UhMS5p4r99OcdvQc5AKOiGA5VBbCv4/BRDWjC4vSI6OBEDBzeBGYeChLxO53fAadekU">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
