--- a/page4.html
+++ b/page4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
 
     
 
@@ -122,7 +122,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZtCpVPbtLCo+cPAIwlMphRibvuUewuhz5IOphfu+4XcYSNBsfDTgfVM8HA6K0UhMS5p4r99OcdvQc5AKOiGA5VBbCv4/BRDWjC4vSI6OBEDBzeBGYeChLxO53fAadekU">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6qSpxu12nVn5lzbkbWW4JIthTMPyfz5YIY5NVtIJGYjfCCsbXoFnBnbohEYdo6tvdS8WB0X2AyZHZ4xBFd6BPY17CXg3oHVYYfVJwn8Eo0PFe+QfJF8fsBHZj/UTlgk4">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
