create github pages

--- a/page1.html
+++ b/page1.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="http://www.metricvault.in">
-                        <img src="assets/images/metric-276x71.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <img src="assets/images/metric-276x71.png" alt="Mobirise" title="" style="height: 4.8rem;">
                     </a>
                 </span>
                 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
 
     
 
