create github pages

--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
@@ -68,7 +68,7 @@
     <div class="container">
         <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-2"></h2>
         <h3 class="mbr-section-subtitle  display-5 align-center mbr-light mbr-fonts-style">
-            What We Do</h3>
+            <br><br>What We Do</h3>
     </div>
     <div class="container-fluid">
         <div class="row tabcont">
