--- a/page4.html
+++ b/page4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
 
     
 
@@ -122,7 +122,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IobPW6HM0neIyliObSnKPdMtCvjA/m25I3s5p/Prqecio0QB1u9KCoNdHBDuHVuHLRIOxWtDSkzWZHTFnOSUjLzfHDlQETEEUWMqjvP+KeD7mLF8scKMCmqGUEXGJEEe">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bm4anKj7CvAp8VtkJsVG3dP+MFBNEiepK6dexAqJ0WfUDkQyQA+OSYl00TgtkXmSacr8XK3bUzABIIY+ICxjA5dOWRdvAJWFX+ICOk0PYYLwHa+1n9+dGm46SCYhUKf9">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
