create github pages

--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
