create github pages

--- a/page4.html
+++ b/page4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
 
     
 
@@ -122,7 +122,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WyPRZ506Rhy8Yh2VCoqMhlD3taIh/FUeoTT0UUqXsx1aPPNvRBe9lm2I108mt1n1pwmg6WtRJQ+8Q6mLCO7WZndlGhgytnENpb7eYf9jFCSCZw9dmPzNsNwes9u1oD0+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sOPprx5n0IGneNr2dET9tRONIno5ddN1ity+OrLvKZI3Jl9/8SPKr0TCb7jbMJUj1Cx0LJFYTx+79PAv6nlhpE6gEeKPr0frvHxDc/YGZ67kO2uWJ5I3e/LWQkXmT2ar">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
