create github pages

--- a/page3.html
+++ b/page3.html
@@ -40,7 +40,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="http://www.metricvault.in">
-                        <img src="assets/images/metric-276x71.png" alt="Mobirise" title="" style="height: 4.8rem;">
+                        <img src="assets/images/oie-transparent-5-700x600.png" alt="Mobirise" title="" style="height: 4.8rem;">
                     </a>
                 </span>
                 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
