create github pages

--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header5 cid-r8kJgWA9l0 mbr-parallax-background" id="header5-l">
 
     
 
@@ -70,11 +70,11 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">
                     Who We Are</h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Metricvault (formerly known as Metricvault Technologies) a whole new perspective”, is a fast emerging Technology consulting company based at Karnool, India. We provide a diversity of consulting Services bespoke to the specific client needs.
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Metricvault (formerly known as Metricvault Technologies) a whole new perspective, is a fast emerging Technology consulting company based at Kurnool, India. We provide a diversity of consulting Services bespoke to the specific client needs.
 <br>
-<br>Metricvault Infosoft Private Limited was started in response to ever increasing need of High quality low cost Business Process Outsourcing services at Karnool, Andrapradesh. Having seen the need to provide UK, USA and Australia based companies with Call Centre, Service Management and Back Office Solutions, Metricvault BPO was formed.
+<br>Metricvault Infosoft Private Limited was started in response to ever increasing need of High quality low cost Business Process Outsourcing services at Kurnool, Andrapradesh. Having seen the need to provide UK, USA and Australia based companies with Call Centre, Service Management and Back Office Solutions, Metricvault BPO was formed.
 <br>
-<br>Metricvault a whole new perspective”, is a fast emerging technology consulting &amp; Training company based at Bangalore, India. We provide a diversity of consulting services bespoke to the specific staffing / Training needs.
+<br>Metricvault a whole new perspective, is a fast emerging technology consulting &amp; Training company based at Bangalore, India. We provide a diversity of consulting services bespoke to the specific staffing / Training needs.
 <br>
 <br>The state of the art infrastructure selected is both scalable and flexible providing for small to corporate sized enterprises. It has a distinct location advantage; being midway at the IT Capital, Andrapradesh.
 <br>
