--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
@@ -94,7 +94,9 @@
                                 <span class="mbri-responsive mbr-iconfont"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Telecom</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>*Telemarketing lead management&nbsp;<br>	                 &nbsp; Product Promotion<br><br>*Lead Generation<br><br>*Research Surveys and Polling telemarketing<br>&nbsp; Lead List<br><br>*Customer Satisfaction<br><br>*Decision Maker Contacts&nbsp;<br><br>*Telephone and Web Based<br></p>
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp; Research Surveys and Polling telemarketing<br>&nbsp; Lead List<br><br>&nbsp; Customer Satisfaction<br><br>&nbsp; Decision Maker Contacts&nbsp;<br><br>&nbsp; Telephone and Web Based<br><br>&nbsp; Human Capital Management
+<br>
+<br>&nbsp; Data Base Management<br></p>
                         </div>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
@@ -102,7 +104,7 @@
                                 <span class="mbri-responsive mbr-iconfont"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Banking / FSS (Retail Banking, Mortgage, Credit Cards, travels &amp; tourism)</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">Airline ticketing and reservations</p><p>Lead generation&nbsp;<br></p><p>Customer service management for      international banks, software firms, telecom    service providers&nbsp;<br></p>
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">Airline ticketing and reservations</p><p>Lead generation&nbsp;<br></p><p>Customer service management for      international banks, software firms, telecom    service providers&nbsp;<br><br>Human Capital Management<br><br>Data Base Management</p>
                         </div>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
@@ -111,7 +113,7 @@
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Services</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Data Management Services</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Data Modeling</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Database Administration</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; HTML Development</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; XML Conversion<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ePub Conversion<br></p>
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Document Management<br><br></p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Image Processing &amp; Capture</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Enterprise Scanning</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Multichannel Capture<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Data Extraction<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Records Management System<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ECM on Mobile<br></p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                         </div>
 
                         
