--- a/page4.html
+++ b/page4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="cid-r8kQlQVpae mbr-parallax-background" id="footer2-n">
 
     
 
@@ -121,7 +121,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LTJyNzq+VYT3G4qHEKxo4sWvDNIuXy7lpwCwI1LHt8Xm/Zh6fV5y8AxvXuf7F+iyoH9FRa/S5u+Q8631tzGVTN/21VgH1yJbcfgw/P1J4s+jUPendYLXkAuzaRJjIzK6">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fYvNCth5UWFiuM699qXQgtqhoChDTbewf51YvtZOSypWN0BlrbIkppP160UPQK2Rq2eHqz2pt02OX1/9hkBFOY3y9HuUsOOFfpb1D3Bzw60L6WhbhLTSbROXyg4v6idF">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
