create github pages

--- a/page3.html
+++ b/page3.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="tabs3 cid-r8kyKKhC4l" id="tabs3-i">
 
     
 
@@ -98,7 +98,7 @@
                                 <span class="mbr-iconfont mbri-mobile"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Telecom</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp; Research Surveys and Polling telemarketing<br>&nbsp; Lead List<br><br>&nbsp; Customer Satisfaction<br><br>&nbsp; Decision Maker Contacts&nbsp;<br><br>&nbsp; Telephone and Web Based<br><br>&nbsp; Human Capital Management
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp;Research Surveys and Polling &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;telemarketing<br>&nbsp;Lead List<br><br>&nbsp; Customer Satisfaction<br><br>&nbsp; Decision Maker Contacts&nbsp;<br><br>&nbsp; Telephone and Web Based<br><br>&nbsp; Human Capital Management
 <br>
 <br>&nbsp; Data Base Management<br></p>
                         </div>
@@ -107,7 +107,7 @@
                             <div class="card-img ">
                                 <span class="mbr-iconfont mbri-growing-chart"></span>
                             </div>
-                            <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Banking / FSS (Retail Banking, Mortgage, Credit Cards, travels &amp; tourism)</h4>
+                            <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Banking / FSS (Retail Banking, &nbsp; &nbsp; &nbsp; Mortgage, Credit Cards, travels &amp; tourism)</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">Airline ticketing and reservations</p><p>Lead generation&nbsp;<br></p><p>Customer service management for      international banks, software firms, telecom    service providers&nbsp;<br><br>Human Capital Management<br><br>Data Base Management</p>
                         </div>
 
@@ -117,9 +117,9 @@
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Services</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">&nbsp;</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Image Processing &amp; Capture</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Enterprise Scanning</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Multichannel Capture<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Data Extraction<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Records Management System<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;ECM on Mobile<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Human Capital Management
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">&nbsp;</p><p>Image Processing &amp; Capture</p><br><p>Enterprise Scanning</p><br><p>Multichannel Capture<br><br>Data Extraction<br><br>Records Management System<br><br>ECM on Mobile<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>Human Capital Management
 <br>
-<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Data Base Management</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
+<br>Data Base Management</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                         </div>
 
                         
