create github pages

--- a/page1.html
+++ b/page1.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header5 cid-r8kJgWA9l0" id="header5-l">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header5 cid-r8kJgWA9l0" id="header5-l">
 
     
 
@@ -76,7 +76,7 @@
                     <br>Who We Are</h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">Metricvault (formerly known as Metricvault Technologies) a whole new perspective, is a fast emerging Technology consulting company based at Kurnool, India. We provide a diversity of consulting Services bespoke to the specific client needs.
 <br>
-<br>Metricvault Private Limited was started in response to ever increasing need of High quality low cost Business Process Outsourcing services at Kurnool, Andrapradesh. Having seen the need to provide UK, USA and Australia based companies with Call Centre, Service Management and Back Office Solutions, Metricvault BPO was formed.
+<br>Metricvault was started in response to ever increasing need of High quality low cost Business Process Outsourcing services at Kurnool, Andrapradesh. Having seen the need to provide UK, USA and Australia based companies with Call Centre, Service Management and Back Office Solutions, Metricvault BPO was formed.
 <br>
 <br>Metricvault a whole new perspective, is a fast emerging technology consulting &amp; Training company based at Kurnool,Andhra Pradesh, India. We provide a diversity of consulting services bespoke to the specific staffing / Training needs.
 <br>
