--- a/page3.html
+++ b/page3.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="tabs3 cid-r8kyKKhC4l mbr-parallax-background" id="tabs3-i">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="tabs3 cid-r8kyKKhC4l mbr-parallax-background" id="tabs3-i">
 
     
 
@@ -99,9 +99,9 @@
                                 <span class="mbr-iconfont mbri-mobile"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Telecom</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; <br>&nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp;Research Surveys and<br> <br>&nbsp;Polling telemarketing<br>&nbsp;<br>&nbsp;Lead List<br><br>&nbsp; Customer Satisfaction<br><br>&nbsp; Decision Maker Contacts&nbsp;<br><br>&nbsp; Telephone and Web Based<br><br>&nbsp; Human Capital Management
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><br><br>&nbsp; Telemarketing lead management&nbsp;<br>	                 &nbsp; <br>&nbsp; Product Promotion<br><br>&nbsp; Lead Generation<br><br>&nbsp;Research Surveys and<br> <br>&nbsp;Polling telemarketing<br>&nbsp;<br>&nbsp;Lead List<br><br>&nbsp;Customer Satisfaction<br><br>&nbsp;Decision Maker Contacts&nbsp;<br><br>&nbsp;Telephone and Web Based<br><br>&nbsp;Human Capital Management
 <br>
-<br>&nbsp; Data Base Management<br></p>
+<br>&nbsp;Data Base Management<br></p>
                         </div>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
@@ -118,9 +118,9 @@
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
                                 Services</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">&nbsp;</p><p>Image Processing &amp; Capture</p><br><p>Enterprise Scanning</p><br><p>Multichannel Capture<br><br>Data Extraction<br><br>Records Management System<br><br>ECM on Mobile<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>Human Capital Management
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7">&nbsp;</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Image Processing &amp; Capture</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Enterprise Scanning</p><br><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Multichannel Capture<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Data Extraction<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Records Management System<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ECM on Mobile<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Human Capital Management
 <br>
-<br>Data Base Management</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
+<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Data Base Management</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p>
                         </div>
 
                         
